--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ include 'astrarre-common-v0'
 include 'astrarre-gui-v0'
 include 'astrarre-main-v0'
 include 'astrarre-items-v0'
+include 'astrarre-access-v0'
