--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,5 @@ include 'astrarre-gui-v0'
 include 'astrarre-main-v0'
 include 'astrarre-items-v0'
 include 'astrarre-access-v0'
+include 'astrarre-transfer-v0'
+
