--- a/astrarre-transfer-v0/build.gradle
+++ b/astrarre-transfer-v0/build.gradle
@@ -1,3 +1,10 @@
 version '0.0.0'
 //moduleDependencies(project, [':astrarre-main-v0'], true)
 moduleDependencies(project, [':astrarre-items-v0', ':astrarre-access-v0'], false)
+
+sourceSets {
+    generator {
+        compileClasspath += sourceSets.main.compileClasspath
+        runtimeClasspath += sourceSets.main.runtimeClasspath
+    }
+}
