make the game run
Signed-off-by: Devan-Kerman <dev.sel20@gmail.com>

--- a/astrarre-items-v0/build.gradle
+++ b/astrarre-items-v0/build.gradle
@@ -1,2 +1,11 @@
 version '0.0.0'
-moduleDependencies(project, [':astrarre-main-v0'], true)
+//moduleDependencies(project, [':astrarre-main-v0'], true)
+def main = rootProject.project(":astrarre-main-v0")
+def curr = project
+main.afterEvaluate {
+    curr.tasks.compileJava.dependsOn main.tasks.generateAbstractions
+}
+
+dependencies {
+    compileOnly files("$main.buildDir/abstracted/impl.jar")
+}
