--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,5 @@ rootProject.name = "astrarre"
 include 'astrarre-rendering-v0'
 include 'astrarre-util-v0'
 include 'astrarre-itemview-v0'
+include 'astrarre-access-v0'
 
