--- a/astrarre-rendering-v0/build.gradle
+++ b/astrarre-rendering-v0/build.gradle
@@ -1,4 +1,4 @@
 version '0.0.0'
 fapi(project)
-dependsOn(project, 'astrarre-util-v0')
+dependsOn(project, 'astrarre-util-v0', 'astrarre-itemview-v0')
 
