--- a/astrarre-recipes-v0/build.gradle
+++ b/astrarre-recipes-v0/build.gradle
@@ -1,3 +1,3 @@
 version '0.0.0'
-dependsOn(project, 'astrarre-transfer-v0')
+dependsOn(project, 'astrarre-itemview-v0', 'astrarre-util-v0')
 fapi(project)
