--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
 }
 
 version '0.0.0'
+group = 'io.github.astrarre'
 
 loom {
     shareCaches = true
@@ -67,18 +68,6 @@ static def dependsOn(Project proj, Iterable<Project> projs) {
                         def depNode = depsNode.appendNode("dependency")
                         depNode.appendNode("groupId", it.group)
                         depNode.appendNode("artifactId", "$it.name-fabric")
-                        depNode.appendNode("version", it.version)
-                        depNode.appendNode("scope", "compile")
-                    }
-                }
-            }
-            mavenApi(MavenPublication) {
-                pom.withXml {
-                    def depsNode = asNode().appendNode("dependencies")
-                    projs.each {
-                        def depNode = depsNode.appendNode("dependency")
-                        depNode.appendNode("groupId", it.group)
-                        depNode.appendNode("artifactId", "$it.name-api")
                         depNode.appendNode("version", it.version)
                         depNode.appendNode("scope", "compile")
                     }
