more graphics work, mixin cleanup
Signed-off-by: Devan-Kerman <dev.sel20@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,4 +20,5 @@ include 'astrarre-gui-v0'
 include 'astrarre-networking-v0'
 include 'astrarre-recipes-v0'
 include 'astrarre-transfer-compat-v0'
+include 'astrarre-recipe-transfer-compat-v0'
 
