--- a/scripts/allprojects.gradle
+++ b/scripts/allprojects.gradle
@@ -38,6 +38,7 @@ allprojects {
         modImplementation "net.fabricmc:fabric-loader:${loader_version}"
         testImplementation 'junit:junit:4.13.1'
         testmodCompile sourceSets.main.output
+        testmodImplementation 'com.github.astei:lazydfu:0.1.1'
     }
 
     processResources {
