--- a/scripts/allprojects.gradle
+++ b/scripts/allprojects.gradle
@@ -14,6 +14,7 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
+        maven { url 'http://dist.wso2.org/maven2' }
         maven { url 'https://raw.githubusercontent.com/Devan-Kerman/Devan-Repo/master/' }
         maven { url 'https://maven.fabricmc.net/' }
         maven { url 'http://maven.modmuss50.me/' }
