--- a/astrarre-rendering-v0/build.gradle
+++ b/astrarre-rendering-v0/build.gradle
@@ -1,4 +1,10 @@
 version '0.0.0'
+
+dependencies {
+    implementation 'com.github.Astrarre:earcut4j:3.0.1'
+    include 'com.github.Astrarre:earcut4j:3.0.1'
+}
+
 fapi(project)
 dependsOn(project, 'astrarre-util-v0', 'astrarre-itemview-v0')
 
