--- a/scripts/allprojects.gradle
+++ b/scripts/allprojects.gradle
@@ -19,6 +19,7 @@ allprojects {
         maven { url 'http://maven.modmuss50.me/' }
         maven { url 'https://dl.bintray.com/astrarre/maven' }
         maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.legacyfabric.net/' }
     }
 
     sourceSets {
@@ -37,8 +38,11 @@ allprojects {
         mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
         modImplementation "net.fabricmc:fabric-loader:${loader_version}"
         testImplementation 'junit:junit:4.13.1'
+        testImplementation 'net.devtech:PotatoUnit:1.0.2'
         testmodCompile sourceSets.main.output
-        testmodImplementation 'com.github.astei:lazydfu:0.1.1'
+        testmodImplementation('com.github.astei:lazydfu:0.1.1') {
+            exclude module: 'fabric-loader'
+        }
     }
 
     processResources {
