--- a/astrarre-gui-v0/build.gradle
+++ b/astrarre-gui-v0/build.gradle
@@ -1,3 +1,7 @@
 version '0.0.0'
 dependsOn(project, 'astrarre-rendering-v0', 'astrarre-networking-v0')
 fapi(project)
+
+dependencies {
+    modCompileOnly "me.shedaniel:RoughlyEnoughItems-api:5.11.188"
+}
