--- a/astrarre-gui-v0/build.gradle
+++ b/astrarre-gui-v0/build.gradle
@@ -1,6 +1,6 @@
 version '0.0.0'
 dependsOn(project, 'astrarre-rendering-v0', 'astrarre-networking-v0')
-fapi(project)
+fapi(project, 'fabric-resource-loader-v0')
 
 dependencies {
     modCompileOnly "me.shedaniel:RoughlyEnoughItems-api:5.11.188"
