--- a/astrarre-recipes-v0/build.gradle
+++ b/astrarre-recipes-v0/build.gradle
@@ -1,3 +1,4 @@
 version '0.0.0'
 dependsOn(project, 'astrarre-itemview-v0', 'astrarre-util-v0')
-fapi(project)
+// todo delet 'fabric-tag-extensions-v0', 'fabric-api-base' dependencies (compileOnly) and make the mixin conditional
+fapi(project, 'fabric-resource-loader-v0', 'fabric-tag-extensions-v0', 'fabric-api-base')
