--- a/astrarre-util-v0/build.gradle
+++ b/astrarre-util-v0/build.gradle
@@ -1,1 +1,7 @@
 version '0.0.0'
+
+dependencies {
+    modCompileOnly ("net.fabricmc.fabric-api:fabric-api:0.30.0+1.16") {
+        exclude module: 'fabric-loader'
+    }
+}
