--- a/astrarre-transfer-v0/build.gradle
+++ b/astrarre-transfer-v0/build.gradle
@@ -13,16 +13,45 @@ repositories {
     maven {
         url = 'http://maven.modmuss50.me'
     }
+    maven {
+        url 'https://maven.blamejared.com'
+        content {
+            includeGroup "vazkii.patchouli"
+        }
+    }
+    maven {
+        name = "Technici4n"
+        url = "https://raw.githubusercontent.com/Technici4n/Technici4n-maven/master/"
+        content {
+            includeGroup "dev.technici4n"
+        }
+    }
+    maven {
+        url 'http://server.bbkr.space:8081/artifactory/libs-release'
+        content {
+            includeGroup "io.github.cottonmc"
+        }
+    }
+    mavenLocal()
 }
 
 dependencies {
     modCompileOnly("alexiil.mc.lib:libblockattributes-all:0.8.4") {
         exclude module: 'fabric-loader'
+        exclude module: 'fabric-api'
     }
-    modCompileOnly ("net.fabricmc.fabric-api:fabric-api:0.30.0+1.16") {
+    modCompileOnly('RebornCore:RebornCore-1.16:4.7.2+build.134') {
+        exclude module: 'fabric-loader'
+        exclude module: 'fabric-api'
+    }
+    modImplementation('TechReborn:TechReborn-1.16:3.8.3+build.231') {
         exclude module: 'fabric-loader'
     }
-    modCompileOnly('RebornCore:RebornCore-1.16:4.7.2+build.134')
+    modImplementation('me.steven:Industrial-Revolution-master:1.9.4-BETA') {
+        exclude module: 'fabric-loader'
+        exclude module: 'fabric-api'
+    }
+
 }
 
 sourceSets {
