--- a/scripts/allprojects.gradle
+++ b/scripts/allprojects.gradle
@@ -10,14 +10,12 @@ allprojects {
     }
 
     minecraft {}
-
     repositories {
         mavenLocal()
         mavenCentral()
         maven { url 'https://raw.githubusercontent.com/Devan-Kerman/Devan-Repo/master/' }
         maven { url 'https://maven.fabricmc.net/' }
         maven { url 'http://maven.modmuss50.me/' }
-        maven { url 'https://dl.bintray.com/astrarre/maven' }
         maven { url 'https://jitpack.io' }
         maven { url 'https://maven.legacyfabric.net/' }
         maven { url "https://maven.shedaniel.me/" }
@@ -43,13 +41,16 @@ allprojects {
         minecraft "com.mojang:minecraft:${minecraft_version}"
         mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
         modImplementation "net.fabricmc:fabric-loader:${loader_version}"
-        testImplementation 'junit:junit:4.13.1'
+        testImplementation('junit:junit:4.13.1') {
+            exclude module: 'fabric-loader'
+        }
         testImplementation('net.devtech:PotatoUnit:1.0.3') {
             exclude module: 'fabric-loader'
         }
         testmodCompile sourceSets.main.output
         testmodImplementation('com.github.astei:lazydfu:0.1.1') {
             exclude module: 'fabric-loader'
+            exclude module: 'fabric-api'
         }
     }
 
