--- a/astrarre-util-v0/build.gradle
+++ b/astrarre-util-v0/build.gradle
@@ -1,7 +1,7 @@
 version '1.0.0'
 
 dependencies {
-    modCompileOnly ("net.fabricmc.fabric-api:fabric-api:0.30.0+1.16") {
+    modCompileOnly ("net.fabricmc.fabric-api:fabric-api:$fabric_version") {
         exclude module: 'fabric-loader'
     }
 }
