--- a/astrarre-rendering-v0/build.gradle
+++ b/astrarre-rendering-v0/build.gradle
@@ -1,4 +1,4 @@
-version '1.0.0'
+version '1.1.0'
 
 dependencies {
     implementation 'com.github.Astrarre:earcut4j:3.0.1'
@@ -6,4 +6,5 @@ dependencies {
 }
 
 dependsOn(project, 'astrarre-util-v0', 'astrarre-itemview-v0')
+fapi(project, 'fabric-api-base', 'fabric-rendering-fluids-v1')
 
