--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ static def fapi(Project proj, String... modules) {
 
 dependencies {
     dependsOn(project, subprojects)
-    modRuntime("me.shedaniel:RoughlyEnoughItems:5.11.188") {
+    modImplementation("me.shedaniel:RoughlyEnoughItems:5.11.188") {
         exclude module: 'fabric-api'
         exclude module: 'fabric-loader'
     }
