--- a/astrarre-transfer-v0/build.gradle
+++ b/astrarre-transfer-v0/build.gradle
@@ -12,6 +12,10 @@ repositories {
     }
     maven {
         url = 'http://maven.modmuss50.me'
+        content {
+            includeGroup "RebornCore"
+            includeGroup "TechReborn"
+        }
     }
     maven {
         url 'https://maven.blamejared.com'
@@ -56,7 +60,6 @@ dependencies {
         exclude module: 'fabric-loader'
         exclude module: 'fabric-api'
     }
-
 }
 
 sourceSets {
