--- a/astrarre-util-v0/build.gradle
+++ b/astrarre-util-v0/build.gradle
@@ -1,7 +1,2 @@
 version '1.1.1'
-
-dependencies {
-    modCompileOnly ("net.fabricmc.fabric-api:fabric-api:$fabric_version") {
-        exclude module: 'fabric-loader'
-    }
-}
+fapi(project)
