--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.4
-loader_version=0.11.3
+minecraft_version=b1.7.3
+loader_version=1.0.0
+plasma_build=18
 
-#Fabric api
-fabric_version=0.33.0+1.16
+# is actually 1.0.6, but we stuffed up the maven build, so 1.0.6.1 should fix that
+api_version=1.0.6.1
 
 # Mod Properties
-archives_base_name=astrarre-api
+mod_version = 1.0.0
+maven_group = io.github.minecraftcursedlegacy.example
+archives_base_name = cursed-legacy-example-mod
